--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -135,7 +135,7 @@ a local version mind-brain supervenience
 % , which if falsified, might change modern approaches to learning 
 \cite{Haykin2008,Ripley2008}. Cognitive neuroscience similarly seems to operate under such assumptions
 % , which if falsified, might result in novel perspectives and theories 
-\cite{Fodor1998, Gazzaniga2008}.  Philosophers continue to debate and refine notions of supervenience 
+\cite{Gazzaniga2008}.  Philosophers continue to debate and refine notions of supervenience 
 % And the question of mind-brain supervenience continues to be debated amongst philosophers 
 \cite{Kim2007}.  
 % Moreover, many cognitive neuroscience investigations could be cast as questions
