--- a/nature_sci_rep/submission2/supp.tex
+++ b/nature_sci_rep/submission2/supp.tex
@@ -80,7 +80,7 @@
 \newtheorem{defi}{Definition}
 \newtheorem{thm}{Theorem}
 \newtheorem{thex}{\emph{Gedankenexperiment}}
-\lhead{Vogelstein JT, et al}
+\lhead{Vogelstein JT, et al.}
 \rhead{Statistical Supervenience Supplement}
 
 
