finished redline cep comments of aug 5 2011

--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -254,7 +254,6 @@ the alternative hypothesis lies on the boundary, so the $p$-value is always equa
 \end{thm}
 
 In other words, we can \emph{never} reject $L^*>0$ in favor of supervenience, no matter how much data we obtain.  
-Supervenience therefore does not satisfy Popper's falsifiability criterion \cite{Popper1959}.
 
 \subsection*{Conditions for a consistent statistical test for $\eps$-supervenience} % (fold)
 
@@ -329,6 +328,9 @@ This leads immediately to the following theorem:
 \begin{thm} \label{thm:4}
 There is no universal $n,n'$ that guarantees $\beta \geq \beta_{min}>\alpha$.
 \end{thm}
+
+% Moreover, switching the null and alternative hypotheses---yielding $H_0^{\eps'}: L^*<\eps$ and $H_A^{\eps'}: L^* \geq \eps$---does not resolve the matter.
+Therefore, even $\eps$-supervenience does not satisfy Popper's falsifiability criterion \cite{Popper1959}.
 
 
 \subsection*{The feasibility of a consistent statistical test for $\eps$-supervenience} % (fold)
