defined beta_min

--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -326,7 +326,7 @@ because we simply have not yet collected enough data.
 % Thus, without restrictions on $F_{MB}$, arbitrarily slow convergence theorems imply that our theorem of $\varepsilon$-supervenience does not \tr{strictly} satisfy Popper's {\it falsifiability} requirement \cite{Popper}.
 This leads immediately to the following theorem:
 \begin{thm} \label{thm:4}
-There is no universal $n,n'$ that guarantees $\beta \geq \beta_{min}>\alpha$.
+For any target power $\beta_{min} > \alpha$, there is no universal $n,n'$ that guarantees $\beta \geq \beta_{min}$.
 \end{thm}
 
 % Moreover, switching the null and alternative hypotheses---yielding $H_0^{\eps'}: L^*<\eps$ and $H_A^{\eps'}: L^* \geq \eps$---does not resolve the matter.
