--- a/arxiv/v2/super.tex
+++ b/arxiv/v2/super.tex
@@ -1,21 +1,13 @@
-%\input{/Users/joshyv/Research/misc/latex_paper.tex}
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{amsfonts}
-\usepackage{amssymb}
 \usepackage{amsthm}
 %\usepackage{cite}
 \usepackage{algorithm}
 \usepackage{algorithmic}
-% \usepackage{times}
+\usepackage{times}
 \usepackage{fancyhdr}
-\usepackage{graphicx}
-\usepackage{verbatim}
-\usepackage{color}
-\usepackage[T1]{fontenc}
-\usepackage[scaled]{helvet}
-\renewcommand*\familydefault{\sfdefault} %% Only if the base font of the document is to be sans serif
 \pagestyle{fancy}
 
 \oddsidemargin=0.0in %%this makes the odd side margin go to the default of 1inch
@@ -29,22 +21,143 @@
 %\headsep=0in
 %\pagestyle{headings}
 
-\usepackage{hyperref}
-% \usepackage{ulem}
-% \usepackage{color}
+\newcommand{\jv}{Joshua Vogelstein}
+\newcommand{\jhu}{Johns Hopkins University}
+%\newcommand{\hp}{https://jshare.johnshopkins.edu/jvogels3/public_html/}
+\newcommand{\ema}{joshuav@jhu.edu}
 
-% \newcommand{\loo}{$L^{(1)}_{h; \mD_n}$}
-\newcommand{\conv}{\rightarrow}
-% \newcommand{\Real}{\mathbb{R}}
-% \providecommand{\tr}[1]{\textcolor{red}{#1}}
+\newcommand{\Vr}{V_{reset}}
+\newcommand{\Vl}{V_{leat}}
+\newcommand{\eqdef}{\overset{\triangle}{=}}
+\newcommand{\D}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\DD}[2]{\frac{\partial ^2 #1}{\partial #2 ^2}}
+\newcommand{\DDD}[3]{\frac{\partial ^2 #1}{\partial #2 \partial #3}}
+\newcommand{\Di}[2]{\frac{\partial ^i #1}{\partial #2 ^i}}
+\newcommand{\grad}{\nabla}
+\newcommand{\Hess}{\nabla\nabla}
 
-\newcommand{\mB}{\mathcal{B}}
-\newcommand{\mD}{\mathcal{D}}
-\newcommand{\mM}{\mathcal{M}}
-\newcommand{\PP}{\mathbb{P}}           % probability
+\providecommand{\tg}[1]{\textcolor{green}{#1}}
+\providecommand{\tb}[1]{\textcolor{blue}{#1}}
+\providecommand{\tr}[1]{\textcolor{red}{#1}}
+\providecommand{\tk}[1]{\textcolor{black}{#1}}
+\providecommand{\twhite}[1]{\textcolor{white}{#1}}
+\providecommand{\ve}[1]{\boldsymbol{#1}}
+\providecommand{\ma}[1]{\boldsymbol{#1}}
+%\providecommand{\ve}[1]{\boldsymbol{#1}}
+%\newcommand{\norm}[1]{\left|\left|#1\right|\right|}
+\providecommand{\norm}[1]{\left \lVert#1 \right  \rVert}
+\providecommand{\deter}[1]{\lvert #1 \rvert}
+\providecommand{\abs}[1]{\left \lvert #1 \right \rvert}
+\newcommand{\trans}[1]{{#1}^{\ensuremath{\mathsf{T}}}}           % transpose
+\newcommand{\transpose}[1]{{#1}^{\ensuremath{\mathsf{T}}}}           % transpose
+\newcommand{\argmax}{\operatornamewithlimits{argmax}}
+\newcommand{\argmin}{\operatornamewithlimits{argmin}}
+\newcommand{\T}{^{\ensuremath{\mathsf{T}}}}           % transpose
+
+\newcommand{\FF}{\mathbb{F}}         
+\newcommand{\PP}{\mathbb{P}}         
+\newcommand{\GG}{\mathbb{G}}         
 \newcommand{\EE}{\mathbb{E}}           % expected value
-\newcommand{\II}{\mathbb{I}}           % expected value
-\newcommand{\Real}{\mathbb{R}}           % expected value
+\newcommand{\II}{\mathbb{I}}           % indicator function
+\newcommand{\QQ}{\mathbb{Q}}           
+\newcommand{\SSS}{\mathbb{S}}           
+\newcommand{\YY}{\mathbb{Y}}
+\newcommand{\Aa}{\mathbb{A}}
+\newcommand{\VV}{\mathbb{V}}
+\newcommand{\LL}{\mathbb{L}}
+
+\newcommand{\iid}{\overset{iid}{\sim}}
+
+% \DeclareMathOperator*{\argmax}{argmax}
+% \DeclareMathOperator*{\argmin}{argmin}
+% \DeclareMathOperator{\find}{find}
+
+% \newtheorem{thm}{Theorem}
+\newcommand{\thma}{\begin{thm}}
+\newcommand{\thmb}{\end{thm}}
+
+\newtheorem{defi}{Definition}
+\newtheorem{thm}{Theorem}
+
+% \newtheorem{defi}{Definition}
+% \newcommand{\defa}{\begin{defi}}
+% \newcommand{\defb}{\end{defi}}
+
+% \newcommand{\eq}{\begin{equation}}
+% \newcommand{\en}{\end{equation}}
+% \newcommand{\eqa}{\begin{equation}}
+% \newcommand{\eqb}{\end{equation}}
+
+\newcommand{\enuma}{\begin{enumerate}}
+\newcommand{\enumb}{\end{enumerate}}
+\newcommand{\ena}{\begin{enumerate}}
+\newcommand{\enb}{\end{enumerate}}
+
+\newcommand{\itema}{\begin{itemize}}
+\newcommand{\itemb}{\end{itemize}}
+\newcommand{\ita}{\begin{itemize}}
+\newcommand{\itb}{\end{itemize}}
+
+% \newcommand{\aligna}{\begin{align}}
+\newcommand{\alignb}{\end{align}}
+
+\newcommand{\proofa}{\begin{proof}}
+\newcommand{\proofb}{\end{proof}}
+
+\newcommand{\bla}{\begin{block}}
+\newcommand{\blb}{\end{block}}
+
+% \newcommand{\seqa}{\begin{equation*}}
+\newcommand{\seqb}{\end{equation*}}
+
+\newcommand{\bth}{\ve{\theta}}
+\newcommand{\bhth}{\mh{\ve{\theta}}}
+\newcommand{\thetn}{\ve{\theta}}
+\newcommand{\thet}{\thetn}
+\newcommand{\theth}{\widehat{\ve{\theta}}}
+\newcommand{\theto}{\ve{\theta}'}
+\newcommand{\wht}{\widehat{\thet}}
+\newcommand{\wtt}{\widetilde{\thet}}
+\newcommand{\vth}{\ve{\thet}}
+\newcommand{\vTh}{\ve{\Theta}}
+\newcommand{\hvth}{\widehat{\ve{\thet}}}
+\newcommand{\bTh}{\ve{\Theta}}
+\newcommand{\hbth}{\widehat{\thet}}
+
+\newcommand{\p}{P_{\bth}}
+\newcommand{\pold}{P_{\bth'}}
+\newcommand{\pk}{P_{\widehat{\ve{\theta}}^{(k)}}}
+\newcommand{\pT}{P_{\thetn_{Tr}}} %\thetn_T
+\newcommand{\pO}{P_{\thetn_o}} %\thetn_o
+\newcommand{\Q}{Q(\thetn,\theto)}
+\newcommand{\m}{m^{\ast}}
+\newcommand{\q}{q(\ve{H}_t)}
+\newcommand{\Ca}{[\text{Ca}^{2+}]}
+
+\newcommand{\Lik}{\mathcal{L}}
+\newcommand{\Cae}{[\widehat{\text{Ca}}^{2+}]}
+\newcommand{\Cav}{\ve{C}}%[\ve{\text{Ca}}^{2+}]}
+\newcommand{\sml}{\sqrt{\ma{\lambda}}}
+\newcommand{\ml}{\ma{\lambda}}
+\newcommand{\nw}{\widehat{n}}
+\newcommand{\nv}{\vec{n}}
+\newcommand{\Ae}{\widehat{A}}
+\newcommand{\te}{\widehat{\tau}}
+\newcommand{\maxn}{\max_{\ve{n}: n_t \geq 0}}
+\newcommand{\V}{\text{Var}}
+
+\providecommand{\mc}[1]{\mathcal{#1}}
+\providecommand{\mb}[1]{\boldsymbol{#1}}
+\providecommand{\mbb}[1]{\mathbb{#1}}
+\providecommand{\mv}[1]{\vec{#1}}
+\providecommand{\mh}[1]{\hat{#1}}
+\providecommand{\mt}[1]{\widetilde{#1}}
+\providecommand{\mhc}[1]{\hat{\mathcal{#1}}}
+\providecommand{\mhb}[1]{\hat{\boldsymbol{#1}}}
+\providecommand{\mvb}[1]{\vec{\boldsymbol{#1}}}
+\providecommand{\mtb}[1]{\widetilde{\boldsymbol{#1}}}
+
+\newcommand{\mP}{\mathbb{P}}
 
 \newcommand{\del}{\delta}
 \newcommand{\sig}{\sigma}
@@ -52,36 +165,90 @@
 \newcommand{\gam}{\gamma}
 \newcommand{\eps}{\varepsilon}
 
-\providecommand{\mc}[1]{\mathcal{#1}}
-\providecommand{\mb}[1]{\boldsymbol{#1}}
-\providecommand{\mbb}[1]{\mathbb{#1}}
-\providecommand{\mv}[1]{\vec{#1}}
-\providecommand{\mh}[1]{\widehat{#1}}
-\providecommand{\mt}[1]{\widetilde{#1}}
-\providecommand{\mhc}[1]{\hat{\mathcal{#1}}}
-\providecommand{\mhb}[1]{\hat{\boldsymbol{#1}}}
-\providecommand{\mvb}[1]{\vec{\boldsymbol{#1}}}
-\providecommand{\mtb}[1]{\widetilde{\boldsymbol{#1}}}
+\newcommand{\Del}{\Delta}
+\newcommand{\Sig}{\Sigma}
+\newcommand{\Lam}{\Lambda}
+\newcommand{\Gam}{\Gamma}
 
-\newcommand{\argmax}{\operatornamewithlimits{argmax}}
-\newcommand{\argmin}{\operatornamewithlimits{argmin}}
+\newcommand{\dvs}{\dot{\bs}_t}
+\newcommand{\dvw}{\dot{\bw}_t}
+\newcommand{\dvx}{\dot{\bx}_t}
+\newcommand{\dvy}{\dot{\by}_t}
+
+\newcommand{\ft}{f_{\ve{\thet}}}
+\newcommand{\gt}{g_{\ve{\thet}}}
+\newcommand{\hht}{h_{\thetn}}
+
+\newcommand{\Real}{\mathbb{R}}
+
+\newcommand{\wconv}{\overset{i.p.}{\rightarrow}}
+\newcommand{\sconv}{\overset{i.p.}{\rightarrow}}
+\newcommand{\conv}{\rightarrow}
+
+\newcommand{\mcE}{\mathcal{E}}
+\newcommand{\mcT}{\mathcal{T}}
+\newcommand{\mcG}{\mathcal{G}}
+\newcommand{\mcM}{\mathcal{M}}
+\newcommand{\mcL}{\mathcal{L}}
+\newcommand{\hatmcE}{\widehat{\mcE}}
+\newcommand{\hatp}{\widehat{p}}
+\newcommand{\hatP}{\widehat{P}}
+\newcommand{\hatQ}{\widehat{Q}}
+\newcommand{\hatL}{\widehat{L}}
+\newcommand{\mhP}{\widehat{\PP}}
+\newcommand{\tildeA}{\widetilde{A}}
+
+\newcommand{\defa}{\begin{defi}}
+\newcommand{\defb}{\end{defi}}
+\newcommand{\defeq}{\overset{\triangle}{=}}
+
+\newcommand{\qap}{\texttt{QAP} }
+\newcommand{\qapa}{\texttt{QAP}$_1$ }
+\newcommand{\qapn}{\texttt{QAP$_n$} }
+\newcommand{\qapb}{\texttt{QAP$_{100}$} }
 
 
-% \newcommand{\mN}{\mathcal{N}}
+\newtheorem{Rem}{Remark}%[section]
+\newtheorem{Alg}{Algorithm}%[section]
+\newtheorem{Thm}{Theorem}[section]
+%\theoremstyle{marginbreak}
+\newtheorem{Lem}{Lemma}[section]
+%\newtheorem{Lem}[Cor]{Lemma}
+%\theoremstyle{change}
+%\theorembodyfont{\itshape}
+\newtheorem{Def}{Definition}[section]
 
+% \newcommand{\ss}{\mc{S}}
+% \newcommand{\mhc}{\mh{\mc{S}}_n}
+
+% \newcommand{\Real}{\mathbb{R}}
+% \newcommand{\bTh}{\mb{\Theta}}
+% \newcommand{\ra}{\rightarrow}
+% \newcommand{\la}{\leftarrow}
+% \newcommand{\bx}{\mb{x}}
+% \newcommand{\bv}{\mb{v}}
+% \newcommand{\ba}{\mb{a}}
+% \newcommand{\bd}{\mb{d}}
+% \newcommand{\balpha}{\mb{\alpha}}
+% \newcommand{\conv}{\rightarrow}  
+% \newcommand{\xx}{\langle \bx_u^\la, \bx_v^\ra\rangle}  
+% \DeclareMathOperator*{\argmax}{arg \hspace{1pt} max \hspace{2pt}}
+% \DeclareMathOperator*{\argmin}{arg \hspace{1pt} min \hspace{2pt}}
+% \newcommand{\norm}[1]{\left \lVert#1 \right  \rVert}
+% 
+
+
+\usepackage{amssymb}
+\usepackage{hyperref}
+
+
+\newcommand{\mB}{\mathcal{B}}
+\newcommand{\mM}{\mathcal{M}}
 \newcommand{\hL}{\widehat{L}}
 \newcommand{\MeB}{\mM \overset{\varepsilon}{{\sim}}_{F} \mB}
 \newcommand{\MsB}{\mM \overset{S}{\sim}_{F} \mB}
-\newcommand{\MnoteB}{\mM \overset{\varepsilon}{{\not\sim}}_{F} \mB}
-\providecommand{\tr}[1]{\textcolor{black}{#1}}
-\providecommand{\norm}[1]{\left \lVert#1 \right  \rVert}
-\newcommand{\T}{^{\ensuremath{\mathsf{T}}}}           % transpose
 \newcommand{\from}{\colon}
 
-
-
-\newtheorem{defi}{Definition}
-\newtheorem{thm}{Theorem}
 \newtheorem{thex}{\emph{Gedankenexperiment}}
 \lhead{Vogelstein JT, et al.}
 \rhead{Statistical Supervenience}
@@ -89,35 +256,48 @@
 
 \begin{document}
 
-	\begin{center}
-{\huge	Are mental properties supervenient on brain properties?}
-\end{center}
 
-\vspace{5px}
+\title{Are mental properties supervenient on brain properties?}
+\author{Joshua T.~Vogelstein\\ Department of Applied Mathematics \& Statistics,  Johns Hopkins University
+        \and 
+		R.~Jacob Vogelstein \\ National Security Technology Department, Johns Hopkins University Applied Physics Laboratory
+		\and 
+		Carey E.~Priebe \\ Department of Applied Mathematics \& Statistics,  Johns Hopkins University}
 
-\begin{center}
-{\large		
-Joshua T. Vogelstein$^{1*}$, R. Jacob Vogelstein$^2$, Carey E. Priebe$^1$\\
-	$^1$Department of Applied Mathematics \& Statistics, \\ Johns Hopkins University, Baltimore, MD, 21218,\\ $^2$National Security Technology Department, \\ Johns Hopkins University Applied Physics Laboratory, Laurel, MD 20723}
-	
-\end{center}
+\date{}
+\maketitle
 
-\vspace{5px}
+% 	\begin{center}
+% {\huge	Are mental properties supervenient on brain properties?}
+% \end{center}
+% 
+% \vspace{5px}
+% 
+% \begin{center}
+% {\large		
+% Joshua T. Vogelstein$^{1*}$, R. Jacob Vogelstein$^2$, Carey E. Priebe$^1$\\
+% 	$^1$Department of Applied Mathematics \& Statistics, \\ Johns Hopkins University, Baltimore, MD, 21218,\\ $^2$National Security Technology Department, \\ Johns Hopkins University Applied Physics Laboratory, Laurel, MD 20723}
+% 	
+% \end{center}
+% 
+% \vspace{5px}
 
 % \maketitle
 % \date{\vspace{-5ex}}
 %\tableofcontents
 % \begin{abstract}
 	
+% \noindent 
+\begin{abstract}
 \noindent The``mind-brain supervenience'' conjecture suggests that all mental properties are derived from the physical properties of the brain. To address the question of whether the mind supervenes on the brain, we frame a supervenience hypothesis in rigorous statistical terms. Specifically, we propose a modified version of supervenience (called $\eps$-supervenience) that is amenable to experimental investigation and statistical analysis. To illustrate this approach, we perform a thought experiment that illustrates how the probabilistic theory of pattern recognition can be used to make a \emph{one}-sided determination of $\eps$-supervenience. The physical property of the brain employed in this analysis is the graph describing brain connectivity (i.e., the brain-graph or connectome). $\eps$-supervenience allows us to determine whether a particular mental property can be inferred from one's connectome to within any given positive misclassification rate, regardless of the relationship between the two. This may provide motivation for cross-disciplinary research between neuroscientists and statisticians.
-
+\end{abstract}
 
 % \end{abstract}
 
 % \vspace*{0.5 in}
 
-\newpage
-% \section*{Introduction}
+% \newpage
+\section*{Introduction}
 
 \noindent Questions and assumptions about mind-brain supervenience go back at least as far as Plato's dialogues in circa 400 BCE \cite{Plato97}.  While there are many different notions of supervenience, we find Davidson's canonical description particularly illustrative \cite{Davidson70}:
 %  The mind-brain supervenience notion was canonized in 1970 with the following quote from Donald Davidson \cite{Davidson70}:
@@ -143,11 +323,8 @@ Yet, to date, relatively scant attention has been paid to what might be empirica
 
 In this work we attempt to bridge the gap between philosophical conjecture and empirical investigations by casting supervenience in a probabilistic framework amenable to hypothesis testing. 
 We then use the probabilistic theory of pattern recognition to determine
+ % This perspective leads to a greater understanding vis-\'a-vis 
 the limits of what one can and cannot learn about supervenience through data analysis.  
-The implications of this work are varied.  It provides a probabilistic framework for converting philosophical conjectures into statistical hypotheses that are amenable experimental investigation, which  allows the philosopher to gain empirical support for her rational arguments. This leads to the construction of the first explicit proof (to our knowledge) of a universally consistent classifier on graphs, and the first demonstration of the tractability of answering supervenience questions.  Supervenience therefore seems to perhaps be a useful (but under utilized) concept for neuroscientific investigations.  This should provide further motivation for cross-disciplinary efforts across three fields---philosophy, statistics, and neuroscience---with shared goals but mostly disjoint jargon and methods of analysis.
-
-
-
 
 
 
@@ -162,7 +339,7 @@ The implications of this work are varied.  It provides a probabilistic framework
 \noindent Let $\mc{M}=\{m_1, m_2, \ldots\}$ be the space of all possible minds and
 let $\mc{B}=\{b_1,b_2,\ldots\}$ be the set of all possible brains.  $\mc{M}$ includes a mind for each possible collection of thoughts, memories, beliefs, etc.
 $\mc{B}$ includes a brain for each possible position and momentum of all subatomic particles within the skull.  
-Given these definitions, Davidson's conjecture may be concisely and formally stated thusly:  $m \neq m' \implies b \neq b'$, where $(m,b), (m',b') \in \mc{M} \times \mc{B}$ are mind-brain pairs.  This mind-brain supervenience relation does not imply an injective relation, a causal relation, or an identity relation (see Appendix 1 for more details and some examples).  To facilitate both statistical analysis and empirical investigation, we convert this supervenience relation from a logical to a probabilistic relation.  
+Given these definitions, Davidson's conjecture may be concisely and formally stated thusly:  $m \neq m' \implies b \neq b'$, where $(m,b), (m',b') \in \mc{M} \times \mc{B}$ are mind-brain pairs.  This mind-brain supervenience relation does not imply an injective relation, a causal relation, or an identity relation (see Appendix for more details and some examples).  To facilitate both statistical analysis and empirical investigation, we convert this supervenience relation from a logical to a probabilistic relation.  
 
 % Let $b$ correspond to an agent's brain, which is a particular element from the set of all possible brains, $\mB$. Similarly, let $m$ correspond to an agent's mind, which is a particular element from the set of all possible minds, $\mM$.  
 Let $F_{MB}$ indicate a joint distribution of minds and brains. Statistical supervenience can then be defined as follows:
@@ -170,7 +347,7 @@ Let $F_{MB}$ indicate a joint distribution of minds and brains. Statistical supe
 \label{def:1} 
 $\mM$ is said to \textit{statistically supervene} on $\mB$ for distribution $F=F_{MB}$, denoted $\mM \overset{S}{\sim}_F \mB$, if and only if $\PP[m \neq m' | b=b']=0$, or equivalently $\PP[m = m' | b = b']=1$. 
 \end{defi}
-\noindent Statistical supervenience is therefore a probabilistic relation on sets (which could be considered a generalization of correlation; see Appendix 1 for details).  
+\noindent Statistical supervenience is therefore a probabilistic relation on sets (which could be considered a generalization of correlation; see Appendix for details).  
 
 
 
@@ -460,6 +637,42 @@ there is no known polynomial time complexity algorithm for graph isomorphism
 % \subsection*{Statistical Setting} % (fold)
 
 % The approximate  number of misclassified minds therefore has a binomial distribution:  $n' \hL^{n'}_{F}(g_{n}) \sim \text{Binomial}(n',L_{F}(g_{n}))$.
+
+
+\newpage
+\appendix
+\section*{Appendix}
+
+
+
+In this appendix we compare supervenience to several other relations on sets (see Figure \ref{fig:rel}).
+
+% aim to provide more intuition regarding supervenience by discussing the limitations and extent of its implications. 
+
+%For instance, it may be the case that minds supervene on brains, but one cannot form an \emph{injective} relation from brains to minds.  
+
+First, a supervenient relation does not imply an injective relation.  An injective relation is any relation that preserves distinctness.  Thus if minds are injective on brains, then $b\neq b' \implies m \neq m'$ (note that the directionality of the implication has been switched relative to supervenience). However, it might be the case that a brain could change without the mind changing.  Consider the case that a single subatomic particle shifts its position by a Plank length, changing brain state from $b$ to $b'$.  It is possible (likely?) that the mental state supervening on brain state $b$ remains $m$, even after $b$ changes to $b'$.  In such a scenario, the mind might still supervene on the brain, but the relation from brains to minds is not injective. This argument also shows that supervenience is not necessarily a \emph{symmetric} relation.  Minds supervening on brains does not imply that brains supervene on minds.  
+
+
+Second,  supervenience does not imply causality. %it may be the case that minds supervene on brains, but that brains do not cause minds.  
+For instance, consider an analogy where $M$ and $B$ correspond to two coins being flipped, each possibly landing on heads or tails.  Further assume that every time one lands on heads so does the other, and every time one lands on tails, so do the other. This implies that $M$ supervenes on $B$, but assumes nothing about whether $M$ causes $B$, or $B$ causes $M$, or some exogenous force causes both.  
+
+Third, supervenience does not imply identity.  The above example with the two coins demonstrates this, as the two coins are not the same thing, even if one has perfect information about the other.  
+
+What supervenience does imply, however, is the following.   Imagine finding two unequal minds.  If $\MsB$, then the brains on which those two minds supervene must be different.  In other words, there cannot be two unequal minds, either of which could supervene on a single brain.  Figure \ref{fig:rel} shows several possible relations between the sets of minds and brains.
+
+
+Note that statistical supervenience is distinct from statistical correlation.  \emph{Statistical correlation} between brain states and mental states is defined as $\rho_{MB}=\EE[(B-\mu_B)(M-\mu_M)]/(\sig_B \sig_M)$, where $\mu_X$ and $\sig_X$ are the mean and variance of $X$, and $\EE[X]$ is the expected value of $X$.  If $\rho_{MB}=1$, then both $\MsB$ and $\mB \overset{S}{{\sim}}_{F} \mM$. Thus, perfect correlation implies supervenience, but supervenience does not imply correlation.  In fact, supervenience may be thought of as a generalization of correlation which incorporates directionality, can be applied to arbitrary valued random variables (such as mental or brain properties), can depend on any moment of a distribution (not just the first two).
+
+
+\begin{figure}[h!tbp]
+	\centering
+		\includegraphics[width=1\linewidth]{supervenience_relations.pdf}
+	\caption{Possible relations between minds and brains.  (A) Minds supervene on brains, and it so happens that there is a bijective relation from brains to minds.  (B) Minds supervene on brains, and it so happens that there is a surjective (a.k.a., onto) relation from brains to minds, but not a bijective one. (C) Minds are \emph{not} supervenient on brains, because two different minds supervene on the same brain.}
+	\label{fig:rel}
+\end{figure}
+% section relations_between_sets (end)
+
 
 
 
