explained that super need not be crazy hard or eps crazy small

--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -401,15 +401,10 @@ Thus, given measurements of mental and brain properties that we believe reflect 
 % Determining that a mental property does not supervene on \emph{any} brain property is beyond the capacities of this formalism.
 
 Interestingly, much of contemporary research in neuroscience and cognitive science could be cast as mind-brain supervenience investigations.  Specifically, searches for ``engrams'' of  memory traces \cite{Lashley50} or ``neural correlates''  of various behaviors or mental properties (for example, consciousness \cite{Koch2010}), may be more aptly called searches for the ``neural supervenia'' of such properties.
-% any investigation that aims to ``explain'' some behavioral or psychological phenomenon by reference to neural (or other brain) activity or structure could be thought of as mind-brain supervenience investigations.  
-% Thus, the proposed $\eps$-supervenience framework is perhaps a useful unifying perspective.
- % for these fields.  
-% The above Gedankenexperiment is an 
 Letting the brain property be a brain-graph is perhaps especially pertinent in light of the advent of ``connectomics'' \cite{SpornsKotter05,Hagmann05}, a field devoted to estimating whole organism brain-graphs and relating them to function.  Testing supervenience of various mental properties on these brain-graphs will perhaps therefore become increasingly compelling; the framework developed herein could be fundamental to these investigations.  
-% Note that these connectomics investigations might lack any dynamics; rather, they effectively assume that structure determines the relevant dynamics.  Assuming that dynamics are a function of either vertex or edge attributes, whether any particular mental property is supervenient to ``only'' connectivity structure, or also some attributes, is merely another $\eps$-supervenience hypothesis. 
 For example, questions about whether connectivity structure alone is sufficient to explain a particular mental property is one possible mind-brain $\eps$-supervenience investigation.  The above synthetic data analysis demonstrates the feasibility of $\eps$-supervenience on small brain-graphs.
-% Appendix 2 presents an illustrative simulated example using the only currently known connectome---that of a Caenorhabditis elegans---demonstrating that $\eps$-supervenience can be rejected at some critical value $c_\alpha$ with only a reasonably small number of samples. 
-Similar supervenience tests on larger animals (such as humans) will potentially benefit from either higher-throughput imaging modalities \cite{HayworthLichtman06, Bock2011}, more coarse brain-graphs \cite{PalmAmunts10,Johansen-Berg2009}, or both.
+Note that $\eps$-supervenience tests need not investigate seemingly intractable problems, like consciousness.  For example, it already seems quite clear that visual perception supervenes on visual cortical activity \cite{??}. Moreover, an inability to reject $\eps$-supervenience for small $\eps$ is also potentially meaningful.  For example, perhaps auditory localization precision supervenes on a rate code only to some $\eps > c$, the rest supervening on a spike timing code \cite{??}. 
+Similar supervenience tests on increasingly complex mental properties will potentially benefit from either higher-throughput imaging modalities \cite{HayworthLichtman06, Bock2011}, more coarse brain-graphs \cite{PalmAmunts10,Johansen-Berg2009}, or both.
 
 
 
