--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -170,7 +170,7 @@ Let $F_{MB}$ indicate a joint distribution of minds and brains. Statistical supe
 \label{def:1} 
 $\mM$ is said to \textit{statistically supervene} on $\mB$ for distribution $F=F_{MB}$, denoted $\mM \overset{S}{\sim}_F \mB$, if and only if $\PP[m \neq m' | b=b']=0$, or equivalently $\PP[m = m' | b = b']=1$. 
 \end{defi}
-\noindent Statistical supervenience is therefore a probabilistic relation on sets (which could be considered a generalization of correlation; see Appendix 1 for details).  
+\noindent Statistical supervenience is therefore a probabilistic relation on sets which could be considered a generalization of correlation (see Appendix 1 for details).  
 
 
 
